--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: server-deployment
 spec:
-  replica: 3
+  replicas: 3
   selector:
     matchLabels:
       component: server
@@ -34,5 +34,4 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: pgpassword
-                  key: PGPASSWORD 
-              
+                  key: PGPASSWORD
