--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: worker-deployment
@@ -20,4 +20,3 @@ spec:
               value: redis-cluster-ip-service
             - name: REDIS_PORT
               value: '6379'
-              
